--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,13 @@ body {
   font-family: Lato, sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: Oswald, sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: #252525
+  color: #252525;
 }
 
 /* Header */
@@ -43,9 +45,9 @@ header a {
 }
 
 #menu {
-font-size: 110%;
-letter-spacing: 4px;
-list-style-type: none;
+  font-size: 110%;
+  letter-spacing: 4px;
+  list-style-type: none;
 }
 
 #menu > li {
@@ -67,7 +69,7 @@ nav {
   top: 100%;
 }
 /* Nav toggle */
-#nav-toggle:checked~nav {
+#nav-toggle:checked ~ nav {
   display: block;
 }
 #nav-toggle {
@@ -94,7 +96,7 @@ main {
 
 #cover-text {
   /* Final rgba value sets the opacity so it is semi-transparent */
-  background-color: rgba(241, 109, 107, .7);
+  background-color: rgba(241, 109, 107, 0.7);
   font-size: 130%;
   position: absolute;
   bottom: 30px;
@@ -104,13 +106,14 @@ main {
   padding-left: 10px;
 }
 
-#cover-text > h2, #cover-text > h3 {
+#cover-text > h2,
+#cover-text > h3 {
   color: #ffffff;
 }
 
 #reasons {
-width: 90%;
-margin: 20px auto;
+  width: 90%;
+  margin: 20px auto;
 }
 
 #reasons h2 {
@@ -118,7 +121,8 @@ margin: 20px auto;
   margin-bottom: 20px;
   text-align: center;
 }
-#benefits-physical > div, #benefits-mental > div {
+#benefits-physical > div,
+#benefits-mental > div {
   line-height: 20px;
   margin-bottom: 20px;
 }
@@ -203,10 +207,50 @@ margin: 20px auto;
     width: 300px;
     right: 50px;
   }
+  /* Reasons section */
+  #benefits-physical,
+  #benefits-mental {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  #benefits-physical > div,
+  #benefits-mental > div {
+    width: 75%;
+  }
+  #benefits-mental > div {
+    text-align: end;
+    align-self: flex-end;
+  }
 }
 /* Larger devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
- #menu a:hover {
+  #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
   }
+}
+
+/* Laptop */
+@media screen and (min-width: 1200px) {
+  #benefits {
+    display: flex;
+    flex-direction: row;
+  }
+  #benefits > div {
+    flex: 1;
+  }
+  #benefits-mental {
+    order: 1;
+    align-items: flex-start;
+  }
+
+  #benefits-image {
+    order: 0;
+  }
+  #benefits-mental > div {
+    align-self: flex-start;
+  }
+  #benefits-physical > div {
+  align-self: flex-end;}
 }
