--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,10 @@ h3 {
   color: #252525;
 }
 
+.hidden-heading {
+  display: none;
+}
+
 /* Header */
 header {
   background-color: #ffffff;
@@ -176,6 +180,7 @@ main {
   /* Override the heading color */
   color: #fafafa;
 }
+
 
 /* Footer */
 #social-networks {
