--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,62 @@ main {
 #photos {
   line-height: 0;
 }
+
+/* Sign up page */
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 auto;
+  margin-top: 47px;
+
+}
+
+#signup {
+  background: url(../images/signup-image.webp);
+  background-size: cover;
+  background-position: 75%;
+  flex-grow: 1;
+  padding: 20px 10% 0 10%;
+}
+
+#signup h2 {
+  color: #fafafa;
+  margin-bottom: 20px;
+}
+
+#signup-form {
+  padding: 30px;
+  color: #ffffff;
+  background-color: rgba(60, 60, 60, 0.6);
+}
+
+.text-input {
+  padding: 0 5px;
+  height: 25px;
+  width: 100%;
+  margin: 5px 0 20px 0;
+  color: #fafafa;
+  background: transparent;
+  border: 1px solid #fafafa;
+  border-radius: 2px;
+}
+
+#radio-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.join-button {
+  margin-top: 20px;
+  padding: 15px 32px;
+  border-radius: 2px;
+  background-color: #454b1b;
+  color: #fafafa;
+  font-size: 100% ;
+}
+
 /* Footer */
 #social-networks {
   text-align: center;
