--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,6 +327,30 @@ main {
   #photos {
     column-count: 3;
   }
+
+  /* Sign up */
+  #signup {
+    position: relative;
+    background-position: center;
+  }
+
+  #signup-form {
+    max-width: 400px;
+    position: absolute;
+    left: 10%;
+    top: 150px;
+  }
+
+  .join-button:hover {
+    background-color: #fafafa;
+    color: #454b1b;
+  }
+
+  .text-input:hover {
+    border-color: #f16c6b;
+  }
+
+
 }
 /* Larger devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
